--- a/Introdução_a_Collections.ipynb
+++ b/Introdução_a_Collections.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOyq7Ih0qSDDzrZ0kB8UVbH",
+      "authorship_tag": "ABX9TyMHKse482KUK7YwOwY72R+G",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1098,6 +1098,292 @@
       "source": [],
       "metadata": {
         "id": "_fvHiSppOD-6"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Objetos Próprios"
+      ],
+      "metadata": {
+        "id": "Xgol-ICMO3mr"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class ContaCorrente:\n",
+        "\n",
+        "  def __init__(self, codigo):\n",
+        "    self.codigo = codigo\n",
+        "    self.saldo = 0\n",
+        "\n",
+        "  def deposita(self, valor):\n",
+        "    self.saldo += valor\n",
+        "\n",
+        "  def __str__(self):\n",
+        "    return \"[>>Codigo {} Saldo {}<<]\".format(self.codigo, self.saldo)"
+      ],
+      "metadata": {
+        "id": "-S2_kbTmO49t"
+      },
+      "execution_count": 69,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "conta_do_gui = ContaCorrente(15)\n",
+        "print(conta_do_gui)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wNQ8U1AsO5v8",
+        "outputId": "4001c8b1-69ac-4556-d36a-38e21fa34b85"
+      },
+      "execution_count": 71,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[>>Codigo 15 Saldo 0<<]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "conta_do_gui.deposita(500)\n",
+        "print(conta_do_gui)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yRpmGzW0PjNn",
+        "outputId": "ac921de0-69ea-4155-fcef-5c56d1bf0d84"
+      },
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[>>Codigo 15 Saldo 1000<<]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "conta_da_dani = ContaCorrente(47685)\n",
+        "conta_da_dani.deposita(1000)\n",
+        "print(conta_da_dani)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HLaGfgEgPxjx",
+        "outputId": "e5d427d6-14c3-4046-dd33-3c5aaced770f"
+      },
+      "execution_count": 74,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[>>Codigo 47685 Saldo 1000<<]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "contas = [conta_do_gui, conta_da_dani]\n",
+        "print(contas)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "krt1E3t6P-zr",
+        "outputId": "31d40baa-38bc-4516-acfc-ffbc8607cda4"
+      },
+      "execution_count": 77,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[<__main__.ContaCorrente object at 0x79df6a205c30>, <__main__.ContaCorrente object at 0x79df6a207940>]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for conta in contas:\n",
+        "  print(conta)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yBxl1lJFQGyq",
+        "outputId": "3fb34117-7b8d-438a-9f00-bebd456c6720"
+      },
+      "execution_count": 80,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[>>Codigo 15 Saldo 1000<<]\n",
+            "[>>Codigo 47685 Saldo 1000<<]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "contas = [conta_do_gui, conta_da_dani, conta_do_gui]"
+      ],
+      "metadata": {
+        "id": "DGq1YaPsQHkU"
+      },
+      "execution_count": 81,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(contas[0])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YmnCqua0QqI7",
+        "outputId": "dfaa52d1-4965-411a-dcb8-0d757e9e297d"
+      },
+      "execution_count": 82,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[>>Codigo 15 Saldo 1000<<]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "conta_do_gui.deposita(100)"
+      ],
+      "metadata": {
+        "id": "Qc-rV5DkQrmB"
+      },
+      "execution_count": 83,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(contas[0])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0hnT3DKEQvUw",
+        "outputId": "6d11636b-c02a-4835-9521-c4d871eb83f2"
+      },
+      "execution_count": 84,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[>>Codigo 15 Saldo 1100<<]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(contas[2])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0wt3Vc2HQxhc",
+        "outputId": "e29e1097-8b70-472c-f6da-9f12519fe6d6"
+      },
+      "execution_count": 85,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[>>Codigo 15 Saldo 1100<<]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "contas[2].deposita(200)"
+      ],
+      "metadata": {
+        "id": "N6IR5AECRPoO"
+      },
+      "execution_count": 86,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(contas[2])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "noQr_zi1R6uh",
+        "outputId": "49c1345f-f11b-4893-fc26-c37103e95d31"
+      },
+      "execution_count": 87,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[>>Codigo 15 Saldo 1300<<]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "ehHjp3m4R7_V"
       },
       "execution_count": null,
       "outputs": []
